checkpoint: Working state before views refactoring
- Migration to svag.pro completed
- All features functional (server.js with inline HTML)
- Gallery, login, landing pages working
- Extension updated with new domain
- This commit serves as safety checkpoint before refactoring views structure

--- a/popup.html
+++ b/popup.html
@@ -146,7 +146,7 @@
     
     <!-- Hidden API URL -->
     <!-- API URL - Production Vercel deployment -->
-    <input type="hidden" id="apiUrl" value="https://svag.vercel.app" />
+    <input type="hidden" id="apiUrl" value="https://svag.pro" />
   </div>
   
   <script src="popup.js"></script>
