--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>svag - Instantly save any SVG you find</title>
+  <meta name="description" content="Chrome extension that saves time. Instantly save any SVG you find on the web.">
+  
+  <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="128x128" href="/icons/icon128.png">
   <link rel="icon" type="image/png" sizes="48x48" href="/icons/icon48.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon16.png">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.svag.pro/">
+  <meta property="og:title" content="svag - Instantly save any SVG you find">
+  <meta property="og:description" content="Chrome extension that saves time. Instantly save any SVG you find on the web.">
+  <meta property="og:image" content="https://www.svag.pro/icons/Cover.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://www.svag.pro/">
+  <meta name="twitter:title" content="svag - Instantly save any SVG you find">
+  <meta name="twitter:description" content="Chrome extension that saves time. Instantly save any SVG you find on the web.">
+  <meta name="twitter:image" content="https://www.svag.pro/icons/Cover.png">
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
