--- a/popup.html
+++ b/popup.html
@@ -146,7 +146,7 @@
     
     <!-- Hidden API URL -->
     <!-- API URL - Production Vercel deployment -->
-    <input type="hidden" id="apiUrl" value="https://svag.pro" />
+    <input type="hidden" id="apiUrl" value="https://www.svag.pro" />
   </div>
   
   <script src="popup.js"></script>
