--- a/iframe/index.html
+++ b/iframe/index.html
@@ -14,11 +14,12 @@
     
     body {
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #f5f5f5;
+      background: white;
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
+      border-radius: 16px;
     }
     
     .iframe-container {
